flux/apps/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-frontend
  namespace: vaultwarden
spec:
  defaultBackend:
    service:
      name: vaultwarden-frontend
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - vaultwarden
