flux/apps/vaultwarden/vaultwarden.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vaultwarden
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  defaultBackend:
    service:
      name: vaultwarden
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - vaultwarden
